--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   dio: ^4.0.0
   flutter_redux: ^0.8.2
   redux_thunk:
+  intl: ^0.17.0
+  redux_persist: ^0.9.0
 
 dev_dependencies:
   flutter_test:
