--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   redux_thunk:
   intl: ^0.17.0
   redux_persist: ^0.9.0
+  redux_persist_flutter: ^0.9.0
+  redux_logging: ^0.5.0
 
 dev_dependencies:
   flutter_test:
