--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   redux_persist: ^0.9.0
   redux_persist_flutter: ^0.9.0
   redux_logging: ^0.5.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
